# technight-project

./: Dockerfile  docker-compose.yml  pyproject.toml
web/: __init__.py
web/template/: df.html
worker/: redis_queue.py  stocks.py
